correcting the phone layout

--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -11,7 +11,7 @@
   <meta name="og:url" content="">
   <meta name="og:type" content="website">
   <!-- favicon -->
-  <link rel="icon" href="/assets/images/cv.png" type="image/x-icon">
+  <link rel="icon" href="/assets/images/title-logo.png" type="image/x-icon">
   <!-- title -->
   <title>Curriculum Vitae - Tommaso Ferdinandi</title>
   <!-- google font -->
