--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <meta name="og:image" content="/assets/images/portfolio-og-image.png">
   <meta name="og:url" content="">
   <meta name="og:type" content="website">
+  <!-- favicon logo -->
+  <link rel="icon" href="/assets/images/title-logo.png" type="image/x-icon">
   <!-- titolo -->
   <title>Tommaso Ferdinandi</title>
   <!-- favicon -->
