--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -91,7 +91,7 @@
         </ul>
         <ul class="col">
           <li> Sass</li>
-          <li> Python</li>
+          <li> Github</li>
         </ul>
       </div>
     </section>
