--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="progress">
           <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
-        <span>Python</span>
+        <span>Github</span>
         <div class="progress">
           <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
