added personal website link to the pages, working on mobile layout

--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -8,7 +8,7 @@
   <meta name="og:title" content="Curriculum Vitae-Tommaso Ferdinandi">
   <meta name="og:description" content="Ciao sono Tommaso, cerchi un Back-End Developer? Questo è il mio curriculum">
   <meta name="og:image" content="/assets/images/cv-og-image.jpg">
-  <meta name="og:url" content="">
+  <meta name="og:url" content="https://tommaso-ferdinandi.github.io/curriculum/index.html">
   <meta name="og:type" content="website">
   <!-- favicon -->
   <link rel="icon" href="/assets/images/title-logo.png" type="image/x-icon">
@@ -43,9 +43,10 @@
             <img src="/assets/images/favicon-home-16x16.png" alt="icona-casa">
             <span>Via Appia Nuova 679, Roma.</span>
           </li>
-          <!-- <li>
-            sito personale
-          </li> -->
+          <li>
+            <img src="/assets/images/favicon-website-16x16.png" alt="icona-sito">
+            <a href="https://tommaso-ferdinandi.github.io" target="_blank">Sito personale</a>
+          </li>
           <li>
             <img src="/assets/images/favicon-github-16x16.png" alt="icona-github">
             <a href="https://www.github.com/Tommaso-Ferdinandi" target="blank">Github</a>
