--- a/form/index.html
+++ b/form/index.html
@@ -7,8 +7,8 @@
   <!-- open graph -->
   <meta name="og:title" content="Contattami-Tommaso Ferdinandi">
   <meta name="og:description" content="Ciao sono Tommaso, cerchi un Back-End Developer? Questo è un form per contattarmi.">
-  <meta name="og:image" content="">
-  <meta name="og:url" content="/assets/images/form-og-image.jpg">
+  <meta name="og:image" content="/assets/images/form-og-image.jpg">
+  <meta name="og:url" content="https://tommaso-ferdinandi.github.io/form/index.html">
   <meta name="og:type" content="website">
   <!-- favicon -->
   <link rel="icon" href="/assets/images/title-logo.png" type="image/x-icon">
