--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="og:title" content="Tommaso Ferdinandi-Home">
   <meta name="og:description" content="Ciao sono Tommaso, benvenuto sul mio sito e web-portfolio.">
   <meta name="og:image" content="/assets/images/portfolio-og-image.png">
-  <meta name="og:url" content="">
+  <meta name="og:url" content="https://tommaso-ferdinandi.github.io">
   <meta name="og:type" content="website">
   <!-- favicon logo -->
   <link rel="icon" href="/assets/images/title-logo.png" type="image/x-icon">
