--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
   <!-- social footer -->
   <footer class="container footer">
-    <p>You have reached the end of the website. <br> If you want to learn more about me <br> i suggest to click on the icons you see <br> on the right.</p>
+    <p>You have reached the end of the website. <br> If you want to learn more about me <br> i suggest to click on the icons you see on the right.</p>
     <nav class="social">
       <a href="https://www.linkedin.com/in/tommaso-ferdinandi-222b551a1" target="_blank">
         <img src="/assets/images/faviconlinkedin-32x32.png" alt="linkedin-logo">
