--- a/form/index.html
+++ b/form/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Ciao sono Tommaso, cerchi un Back-End Developer? Questo è un form per contattarmi.">
+  <!-- rendere piu veloci aggiornamenti github pages -->
+  <meta http-equiv='cache-control' content='no-cache'> 
+  <meta http-equiv='expires' content='0'> 
+  <meta http-equiv='pragma' content='no-cache'>
   <!-- open graph -->
   <meta name="og:title" content="Contattami-Tommaso Ferdinandi">
   <meta name="og:description" content="Ciao sono Tommaso, cerchi un Back-End Developer? Questo è un form per contattarmi.">
