--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Ciao sono Tommaso, un aspirante sviluppatore Back-End.">
+  <!-- rendere piu veloci aggiornamenti github pages -->
+  <meta http-equiv='cache-control' content='no-cache'> 
+  <meta http-equiv='expires' content='0'> 
+  <meta http-equiv='pragma' content='no-cache'>
   <!-- open graph -->
   <meta name="og:title" content="Tommaso Ferdinandi-Home">
   <meta name="og:description" content="Ciao sono Tommaso, benvenuto sul mio sito e web-portfolio.">
