correct text error

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="descrizione">
         <p>
           "Ciao sono Tommaso,<br>
-           sono un aspirante Sviluppatore Web con una forte passione per la tecnologia, l'innovazione e la sostenibilità."
+           un aspirante Sviluppatore Web con una forte passione per la tecnologia, l'innovazione e la sostenibilità."
         </p>
       </div>
     </section>
