--- a/curriculum/curriculum.html
+++ b/curriculum/curriculum.html
@@ -11,11 +11,11 @@
   <!-- open graph -->
   <meta name="og:title" content="Curriculum Vitae-Tommaso Ferdinandi">
   <meta name="og:description" content="Ciao sono Tommaso, cerchi un Back-End Developer? Questo è il mio curriculum">
-  <meta name="og:image" content="/assets/images/cv-og-image.jpg">
+  <meta name="og:image" content="../assets/images/cv-og-image.jpg">
   <meta name="og:url" content="https://tommaso-ferdinandi.github.io/curriculum/index.html">
   <meta name="og:type" content="website">
   <!-- favicon -->
-  <link rel="icon" href="/assets/images/title-logo.png" type="image/x-icon">
+  <link rel="icon" href="../assets/images/title-logo.png" type="image/x-icon">
   <!-- title -->
   <title>Curriculum Vitae - Tommaso Ferdinandi</title>
   <!-- google font -->
@@ -25,34 +25,34 @@
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <!-- css -->
-  <link rel="stylesheet" href="/assets/css/curriculum.css">
+  <link rel="stylesheet" href="../assets/css/curriculum.css">
 </head>
 <body class="row">
   <main class="cv col-12 col-sm-11 col-md-9 col-lg-7 col-xl-6 col-xxl-5  container-fluid">
     <!-- sezione relativa alle generalità -->
     <section class="container-fluid row informazioni-personali">
-      <img class="profilo col-5" src="/assets/images/small-profile-picture.jpg" alt="profile-picture" srcset="/assets/images/profile-picture.jpg 2x, /assets/images/small-profile-picture.jpg 1x">
+      <img class="profilo col-5" src="../assets/images/small-profile-picture.jpg" alt="profile-picture" srcset="/assets/images/profile-picture.jpg 2x, /assets/images/small-profile-picture.jpg 1x">
       <div class="col-7 generalita">
         <h1>Tommaso Ferdinandi</h1>
         <ul>
           <li>
-            <img src="/assets/images/favicon-phone-16x16.png" alt="icona-telefono">
+            <img src="../assets/images/favicon-phone-16x16.png" alt="icona-telefono">
             <span>+39 3895292262</span>
           </li>
           <li>
-            <img src="/assets/images/favicon-email-16x16.png" alt="icona-email">
+            <img src="../assets/images/favicon-email-16x16.png" alt="icona-email">
             <span>tommaso.ferdinandi99@gmail.com</span>
           </li>
           <li>
-            <img src="/assets/images/favicon-home-16x16.png" alt="icona-casa">
+            <img src="../assets/images/favicon-home-16x16.png" alt="icona-casa">
             <span>Via Appia Nuova 679, Roma.</span>
           </li>
           <li>
-            <img src="/assets/images/favicon-website-16x16.png" alt="icona-sito">
+            <img src="../assets/images/favicon-website-16x16.png" alt="icona-sito">
             <a href="https://tommaso-ferdinandi.github.io" target="_blank">Sito personale</a>
           </li>
           <li>
-            <img src="/assets/images/favicon-github-16x16.png" alt="icona-github">
+            <img src="../assets/images/favicon-github-16x16.png" alt="icona-github">
             <a href="https://www.github.com/Tommaso-Ferdinandi" target="blank">Github</a>
           </li>
         </ul>
