--- a/form/form.html
+++ b/form/form.html
@@ -11,11 +11,11 @@
   <!-- open graph -->
   <meta name="og:title" content="Contattami-Tommaso Ferdinandi">
   <meta name="og:description" content="Ciao sono Tommaso, cerchi un Back-End Developer? Questo è un form per contattarmi.">
-  <meta name="og:image" content="/assets/images/form-og-image.jpg">
+  <meta name="og:image" content="../assets/images/form-og-image.jpg">
   <meta name="og:url" content="https://tommaso-ferdinandi.github.io/form/index.html">
   <meta name="og:type" content="website">
   <!-- favicon -->
-  <link rel="icon" href="/assets/images/title-logo.png" type="image/x-icon">
+  <link rel="icon" href="../assets/images/title-logo.png" type="image/x-icon">
   <!-- title -->
   <title>Contattami - Tommaso Ferdinandi</title>
   <!-- google font -->
@@ -25,7 +25,7 @@
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <!-- css -->
-  <link rel="stylesheet" href="/assets/css/form.css">
+  <link rel="stylesheet" href="../assets/css/form.css">
   <!-- emailjs script -->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
   <script type="text/javascript">
@@ -35,14 +35,12 @@
       });
     })();
   </script>
-  <!-- mio js script -->  
-  <script src="/assets/js/form.js"></script>  
 </head>
 
 <body class="row">
   <main class="col-11 col-sm-9 col-md-7 col-lg-6 col-xl-5 col-xxl-4  container">
     <!-- form -->
-    <form id="contattami" action="https://api.emailjs.com/api/v1.0/email/send" method="post">
+    <form id="contattami" method="post" action="https://api.emailjs.com/api/v1.0/email/send">
       <!-- riquadro del form -->
       <fieldset form="contattami">
         <legend> Contattami </legend>
@@ -70,10 +68,10 @@
         <div class="row">
           <label class="col-3" for="motivo">Motivo</label>
           <select class="col-7" name="motivo" id="motivo">
-            <option value="consulenza">-</option>
+            <option value="option">-</option>
             <option value="consulenza">Consulenza</option>
-            <option value="consulenza">Offerta di lavoro</option>
-            <option value="consulenza">Altro</option>
+            <option value="offerta-lavoro">Offerta di lavoro</option>
+            <option value="altro">Altro</option>
           </select>
         </div>
         <!-- opzioni lavoro -->
@@ -90,13 +88,15 @@
         <textarea name="messaggio" id="messaggio" maxlength="500" placeholder="Scrivi qui.." required></textarea>
         <!-- submit -->
          <div class="row">
-          <button id="submit" onclick="sendMail()" class="col-4 btn btn-dark">Invia</button>
+          <button id="submit" type="submit" class="col-4 btn btn-dark">Invia</button>
           <button type="reset" class=" col-4 btn btn-light">Reimposta</button>
          </div>
       </fieldset>
     </form>
   </main>
 
+  <!-- mio js script -->  
+  <script src="../assets/js/form.js"></script>  
   <!-- bootstrap js e popper -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
