--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <!-- open graph -->
   <meta name="og:title" content="Tommaso Ferdinandi-Home">
   <meta name="og:description" content="Ciao sono Tommaso, benvenuto sul mio sito e web-portfolio.">
-  <meta name="og:image" content="/assets/images/portfolio-og-image.png">
+  <meta name="og:image" content="assets/images/portfolio-og-image.png">
   <meta name="og:url" content="https://tommaso-ferdinandi.github.io">
   <meta name="og:type" content="website">
   <!-- favicon logo -->
-  <link rel="icon" href="/assets/images/title-logo.png" type="image/x-icon">
+  <link rel="icon" href="assets/images/title-logo.png" type="image/x-icon">
   <!-- titolo -->
   <title>Tommaso Ferdinandi</title>
   <!-- favicon -->
@@ -30,7 +30,7 @@
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <!-- css -->
-  <link rel="stylesheet" href="/assets/css/main.css">
+  <link rel="stylesheet" href="assets/css/main.css">
 
 </head>
 <body>
@@ -54,7 +54,7 @@
   <main class=" core container-fluid">
     <!-- bio -->
     <section id="about" class="container-fluid about">
-      <img class="foto-profilo" src="/assets/images/small-profile-picture.jpg" alt="profile-picture" srcset="/assets/images/profile-picture.jpg 2000w, /assets/images/small-profile-picture.jpg 1000w" 
+      <img class="foto-profilo" src="assets/images/small-profile-picture.jpg" alt="profile-picture" srcset="assets/images/profile-picture.jpg 2000w, assets/images/small-profile-picture.jpg 1000w" 
       sizes="(min-width:961px) 960px 100vw">
       <div class="descrizione">
         <p>
@@ -96,7 +96,7 @@
       <h2>Progetti</h2>
       <div class="tutte-cards">
         <div class="card">
-          <img class="card-img-top" src="/assets/images/lamp-idea.png" alt="project-photo">
+          <img class="card-img-top" src="assets/images/lamp-idea.png" alt="project-photo">
           <div class="card-body">
             <h5 class="card-title">Tante idee..</h5>
             <p class="card-text">Sto lavorando sul progetto Html e Css, ma tanti altri sono in arrivo.</p>
@@ -104,7 +104,7 @@
           </div>
         </div>
         <div class="card card-2 d-none d-md-block">
-          <img class="card-img-top" src="/assets/images/libri.png" alt="project-photo">
+          <img class="card-img-top" src="assets/images/libri.png" alt="project-photo">
           <div class="card-body">
             <h5 class="card-title">Tante cose da imparare..</h5>
             <p class="card-text">Presto studierò Javascript, Typescript, React, php,  MySQL, Java e Node.js. </p>
@@ -121,8 +121,8 @@
         perfavore considera di visionare il mio CV o contattami direttamente.
       </p>
       <div class="buttons">
-        <a href="/curriculum/index.html" target="_blank" title="Vai al Curriculum" class="btn btn-dark">Visiona il mio CV</a>
-        <a href="/form/index.html" target="_blank" title="Vai al Form" class=" btn btn-dark">Contattami</a>
+        <a href="curriculum/curriculum.html" target="_blank" title="Vai al Curriculum" class="btn btn-dark">Visiona il mio CV</a>
+        <a href="form/form.html" target="_blank" title="Vai al Form" class=" btn btn-dark">Contattami</a>
       </div>
     </section>
   </main>
@@ -132,10 +132,10 @@
     <p>Se vuoi conoscermi meglio, ti suggerisco <br> di visitare i miei profili social qui a destra.</p>
     <nav class="social">
       <a href="https://www.linkedin.com/in/tommaso-ferdinandi-222b551a1" target="_blank">
-        <img src="/assets/images/faviconlinkedin-32x32.png" alt="linkedin-logo">
+        <img src="assets/images/faviconlinkedin-32x32.png" alt="linkedin-logo">
       </a>
       <a href="https://www.github.com/Tommaso-Ferdinandi" target="_blank">
-        <img src="/assets/images/favicongithub-32x32.png" alt="github-logo">
+        <img src="assets/images/favicongithub-32x32.png" alt="github-logo">
       </a>
     </nav>
   </footer>
