--- a/curriculum/curriculum.html
+++ b/curriculum/curriculum.html
@@ -12,7 +12,7 @@
   <meta name="og:title" content="Curriculum Vitae-Tommaso Ferdinandi">
   <meta name="og:description" content="Ciao sono Tommaso, cerchi un Back-End Developer? Questo è il mio curriculum">
   <meta name="og:image" content="../assets/images/cv-og-image.jpg">
-  <meta name="og:url" content="https://tommaso-ferdinandi.github.io/curriculum/index.html">
+  <meta name="og:url" content="https://tommaso-ferdinandi.github.io/curriculum/curriculum.html">
   <meta name="og:type" content="website">
   <!-- favicon -->
   <link rel="icon" href="../assets/images/title-logo.png" type="image/x-icon">
@@ -31,7 +31,7 @@
   <main class="cv col-12 col-sm-11 col-md-9 col-lg-7 col-xl-6 col-xxl-5  container-fluid">
     <!-- sezione relativa alle generalità -->
     <section class="container-fluid row informazioni-personali">
-      <img class="profilo col-5" src="../assets/images/small-profile-picture.jpg" alt="profile-picture" srcset="/assets/images/profile-picture.jpg 2x, /assets/images/small-profile-picture.jpg 1x">
+      <img class="profilo col-5" src="../assets/images/small-profile-picture.jpg" alt="profile-picture" srcset="../assets/images/profile-picture.jpg 2x, ../assets/images/small-profile-picture.jpg 1x">
       <div class="col-7 generalita">
         <h1>Tommaso Ferdinandi</h1>
         <ul>
