correcting some mistakes

--- a/curriculum/curriculum.html
+++ b/curriculum/curriculum.html
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="../assets/css/curriculum.css">
 </head>
 <body class="row">
-  <main class="cv col-12 col-sm-11 col-md-9 col-lg-7 col-xl-6 col-xxl-5  container-fluid">
+  <main class="cv col-12 col-sm-11 col-md-9 col-lg-7 col-xl-6 col-xxl-5 container-fluid">
     <!-- sezione relativa alle generalità -->
     <section class="container-fluid row informazioni-personali">
       <img class="profilo col-5" src="../assets/images/small-profile-picture.jpg" alt="profile-picture" srcset="../assets/images/profile-picture.jpg 2x, ../assets/images/small-profile-picture.jpg 1x">
@@ -49,11 +49,11 @@
           </li>
           <li>
             <img src="../assets/images/favicon-website-16x16.png" alt="icona-sito">
-            <a href="https://tommaso-ferdinandi.github.io" target="_blank">Sito personale</a>
+            <a href="https://tommaso-ferdinandi.github.io" rel="noopener" target="_blank">Sito personale</a>
           </li>
           <li>
             <img src="../assets/images/favicon-github-16x16.png" alt="icona-github">
-            <a href="https://www.github.com/Tommaso-Ferdinandi" target="blank">Github</a>
+            <a href="https://www.github.com/Tommaso-Ferdinandi" rel="noopener" target="blank">Github</a>
           </li>
         </ul>
       </div>
