--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
   <!-- header menu fisso solo su mobile -->
   <header class="header">
-    <a id="nome" href="#">Tommaso Ferdinandi</a>
+    <h1 class="nome"><a  href="#">Tommaso Ferdinandi</a></h1>
     <input type="checkbox" class="menu-btn" id="menu-btn">-</button>
     <label for="menu-btn" class="menu-icon">
       <span class="nav-icon"></span>
@@ -121,8 +121,8 @@
         perfavore considera di visionare il mio CV o contattami direttamente.
       </p>
       <div class="buttons">
-        <a href="curriculum/curriculum.html" target="_blank" title="Vai al Curriculum" class="btn btn-dark">Visiona il mio CV</a>
-        <a href="form/form.html" target="_blank" title="Vai al Form" class=" btn btn-dark">Contattami</a>
+        <a href="curriculum/curriculum.html" rel="noopener" target="_blank" title="Vai al Curriculum" class="btn btn-dark">Visiona il mio CV</a>
+        <a href="form/form.html" rel="noopener" target="_blank" title="Vai al Form" class=" btn btn-dark">Contattami</a>
       </div>
     </section>
   </main>
@@ -131,10 +131,10 @@
   <footer class="container footer">
     <p>Se vuoi conoscermi meglio, ti suggerisco <br> di visitare i miei profili social qui a destra.</p>
     <nav class="social">
-      <a href="https://www.linkedin.com/in/tommaso-ferdinandi-222b551a1" target="_blank">
+      <a href="https://www.linkedin.com/in/tommaso-ferdinandi-222b551a1" rel="noopener" target="_blank">
         <img src="assets/images/faviconlinkedin-32x32.png" alt="linkedin-logo">
       </a>
-      <a href="https://www.github.com/Tommaso-Ferdinandi" target="_blank">
+      <a href="https://www.github.com/Tommaso-Ferdinandi" rel="noopener" target="_blank">
         <img src="assets/images/favicongithub-32x32.png" alt="github-logo">
       </a>
     </nav>
