--- a/curriculum/curriculum.html
+++ b/curriculum/curriculum.html
@@ -64,7 +64,7 @@
       <h2>Esperienze lavorative</h2>
       <div class="row titolo">
         <h3 class="col-8">Rider Deliveroo</h3>
-        <p class="col-4">2018 - Presente</p>
+        <p id="data" class="col-4">2018 - Presente</p>
         <p class="col-10 descrizione">Lavorare come rider per Deliveroo mi ha insegnato l'importanza ad essere responsabile dei propri errori e proattivo nel risolvere i problemi dei clienti per soddisfare i loro bisogni. </p>
       </div>
     </section>
