replace all the html inline style with sass

--- a/index.html
+++ b/index.html
@@ -65,23 +65,23 @@
       <div class="skills-livello">
         <span>Html</span>
         <div class="progress">
-          <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+          <div id="html" class="progress-bar" role="progressbar"  aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <span>Css</span>
         <div class="progress">
-          <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+          <div id="css" class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <span>Bootstrap</span>
         <div class="progress">
-          <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+          <div id="bootstrap" class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <span>Sass</span>
         <div class="progress">
-          <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+          <div id="sass" class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <span>Github</span>
         <div class="progress">
-          <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+          <div id="github" class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
       </div>
     </section>
@@ -95,15 +95,15 @@
           <div class="card-body">
             <h5 class="card-title">Tante idee..</h5>
             <p class="card-text">Sto lavorando sul progetto Html e Css, ma tanti altri sono in arrivo.</p>
-            <a href="#" class=" btn btn-dark">Lavori in corso..</a>
+            <a href="#" class="button">Lavori in corso..</a>
           </div>
         </div>
-        <div class="card card-2 d-none d-md-block">
+        <div class="card card-2">
           <img class="card-img-top" src="assets/images/libri.png" alt="project-photo">
           <div class="card-body">
             <h5 class="card-title">Tante cose da imparare..</h5>
             <p class="card-text">Presto studierò Javascript, Typescript, React, php,  MySQL, Java e Node.js. </p>
-            <a href="#" class="btn btn-dark">Lavori in corso..</a>
+            <a href="#" class="button">Lavori in corso..</a>
           </div>
         </div>
       </div>
@@ -115,9 +115,9 @@
       <p>Se sei interessato a lavorare con me, <br>
         perfavore considera di visionare il mio CV o contattami direttamente.
       </p>
-      <div class="buttons">
-        <a href="curriculum/curriculum.html" rel="noopener" target="_blank" title="Vai al Curriculum" class="btn btn-dark">Visiona il mio CV</a>
-        <a href="form/form.html" rel="noopener" target="_blank" title="Vai al Form" class=" btn btn-dark">Contattami</a>
+      <div class="nav-buttons">
+        <a href="curriculum/curriculum.html" rel="noopener" target="_blank" title="Vai al Curriculum" class="button">Visiona il mio CV</a>
+        <a href="form/form.html" rel="noopener" target="_blank" title="Vai al Form" class="button">Contattami</a>
       </div>
     </section>
   </main>
