worked on the mains css

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="card">
           <img class="card-img-top" src="assets/images/lamp-idea.png" alt="project-photo">
           <div class="card-body">
-            <h5 class="card-title">Tante idee..</h5>
+            <h3 class="card-title">Tante idee..</h5>
             <p class="card-text">Sto lavorando sul progetto Html e Css, ma tanti altri sono in arrivo.</p>
             <a href="#" class="button">Lavori in corso..</a>
           </div>
@@ -101,7 +101,7 @@
         <div class="card card-2">
           <img class="card-img-top" src="assets/images/libri.png" alt="project-photo">
           <div class="card-body">
-            <h5 class="card-title">Tante cose da imparare..</h5>
+            <h3 class="card-title">Tante cose da imparare..</h5>
             <p class="card-text">Presto studierò Javascript, Typescript, React, php,  MySQL, Java e Node.js. </p>
             <a href="#" class="button">Lavori in corso..</a>
           </div>
@@ -123,7 +123,7 @@
   </main>
 
   <!-- social footer -->
-  <footer class="container footer">
+  <footer class="container-fluid footer">
     <p>Se vuoi conoscermi meglio, ti suggerisco <br> di visitare i miei profili social qui a destra.</p>
     <nav class="social">
       <a href="https://www.linkedin.com/in/tommaso-ferdinandi-222b551a1" rel="noopener" target="_blank">
